[gd_scene load_steps=11 format=2]

[ext_resource path="res://components/elements/styled/icon_button.tscn" type="PackedScene" id=1]
[ext_resource path="res://assets/icons/icon_128_add.svg" type="Texture" id=2]
[ext_resource path="res://assets/icons/icon_128_substract_minus_remove.svg" type="Texture" id=3]
[ext_resource path="res://assets/icons/icon_128_search.svg" type="Texture" id=4]
[ext_resource path="res://components/neighbourhood/component_neighbourhood_navigator.gd" type="Script" id=5]
[ext_resource path="res://components/neighbourhood/component_neighbourhood_view.gd" type="Script" id=6]
[ext_resource path="res://assets/theme/dark_theme.tres" type="Theme" id=7]
[ext_resource path="res://components/dashboard/shared/loading_overlay.tscn" type="PackedScene" id=8]

[sub_resource type="Gradient" id=1]
offsets = PoolRealArray( 0.934426, 1 )
colors = PoolColorArray( 1, 1, 1, 1, 1, 1, 1, 0 )

[sub_resource type="GradientTexture2D" id=2]
gradient = SubResource( 1 )
width = 96
height = 96
fill = 1
fill_from = Vector2( 0.5, 0.5 )
fill_to = Vector2( 0.5, 0 )

[node name="GraphView" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( -80, 0 )
rect_clip_content = true
mouse_filter = 2
theme = ExtResource( 7 )
script = ExtResource( 6 )

[node name="GraphNavigator" type="Node2D" parent="."]
script = ExtResource( 5 )

[node name="MouseDragHint" type="Sprite" parent="GraphNavigator"]
visible = false
modulate = Color( 0.913725, 0.552941, 0.968627, 0.156863 )
position = Vector2( 15, 10 )
texture = SubResource( 2 )

[node name="Content" type="Node2D" parent="GraphNavigator"]

[node name="ZoomTween" type="Tween" parent="GraphNavigator"]

[node name="Buttons" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -47.0
margin_right = 47.0
margin_bottom = 40.0
mouse_filter = 2

[node name="UIZoomGroup" type="HBoxContainer" parent="Buttons"]
margin_right = 94.0
margin_bottom = 28.0
rect_pivot_offset = Vector2( -448, -415 )
custom_constants/separation = 5

[node name="ButtonZoomMinus" parent="Buttons/UIZoomGroup" instance=ExtResource( 1 )]
margin_right = 28.0
margin_bottom = 28.0
rect_min_size = Vector2( 28, 28 )
hint_tooltip = "Change UI Scale"
icon_tex = ExtResource( 3 )
icon_margin = 2

[node name="ButtonZoomCenter" parent="Buttons/UIZoomGroup" instance=ExtResource( 1 )]
margin_left = 33.0
margin_right = 61.0
margin_bottom = 28.0
rect_min_size = Vector2( 28, 28 )
hint_tooltip = "Reset Zoom"
icon_tex = ExtResource( 4 )
icon_margin = 2

[node name="ButtonZoomPlus" parent="Buttons/UIZoomGroup" instance=ExtResource( 1 )]
margin_left = 66.0
margin_right = 94.0
margin_bottom = 28.0
rect_min_size = Vector2( 28, 28 )
hint_tooltip = "Change UI Scale"
icon_tex = ExtResource( 2 )
icon_margin = 2

[node name="ZoomIn" type="Button" parent="Buttons"]
visible = false
margin_top = 32.0
margin_right = 152.667
margin_bottom = 64.0
text = "recalculate layout"

[node name="Back" type="Button" parent="Buttons"]
visible = false
margin_top = 68.0
margin_right = 152.0
margin_bottom = 100.0
text = "back"

[node name="LoadingOverlay" parent="." instance=ExtResource( 8 )]

[connection signal="pressed" from="Buttons/UIZoomGroup/ButtonZoomMinus" to="GraphNavigator" method="_on_ButtonZoomMinus_pressed"]
[connection signal="pressed" from="Buttons/UIZoomGroup/ButtonZoomCenter" to="." method="_on_ButtonZoomCenter_pressed"]
[connection signal="pressed" from="Buttons/UIZoomGroup/ButtonZoomCenter" to="GraphNavigator" method="_on_ButtonZoomCenter_pressed"]
[connection signal="pressed" from="Buttons/UIZoomGroup/ButtonZoomPlus" to="GraphNavigator" method="_on_ButtonZoomPlus_pressed"]
[connection signal="pressed" from="Buttons/ZoomIn" to="." method="_on_StepButton_pressed"]
[connection signal="pressed" from="Buttons/Back" to="." method="_on_Back_pressed"]
